--- a/src/Checkout.css
+++ b/src/Checkout.css
@@ -10,6 +10,11 @@
   margin-bottom: 10px;
 }
 
+.checkout__greeting {
+  margin-left: 10px;
+  font-weight: 400;
+}
+
 .checkout__title {
   margin-right: 10px;
   padding: 10px;
